@@ -86,6 +86,7 @@
 	- send query/verify output through rpmlog().
 	- resurrect rpmErrorSetCallback() and rpmErrorString().
 	- use malloc'ed buffer for large queries.
+	- fix: avoid FAT and other brain-dead file systems that have not inodes.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
